syntax = "proto3";

package auth;

import "google/api/annotations.proto";

option go_package = "./;genpb";

message LoginParams {
    string username = 1;
    string password = 2;
}

message TokenResponse {
  string access_token = 1;
  string token_type = 2;
  int32 expires_in = 3;
  string refresh_token = 4;
}

service AuthenticationService {
  rpc login(LoginParams) returns (TokenResponse) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }
}
